src/test/deca/codegen/valid/non_object_simple_var_add_mul_div_integers.deca
// @result 49
/*
    Description : test sur l'addition, multiplication, et division de variables

    Résultat : A définir...

*/
{
    int a = -5;
    int b = 2;
    int c = 4;
    int d = 7;
    int e = 2;
    int f = 3;

    println(a*b+c*d*e+f);
}
